OPHYK-726 Prevent long eIDAS-tunniste from breaking the layout completely by truncating it with ellipsis

--- a/henkilo-ui/src/main/static/src/index.css
+++ b/henkilo-ui/src/main/static/src/index.css
@@ -40,6 +40,14 @@ select option {
     padding: 5px 0;
 }
 
+.eidasTruncated {
+    display: inline-block;
+    max-width: 213px;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+}
+
 .nowrap {
     white-space: nowrap;
 }
